# JPaxos

./: .classpath  .gitignore  .project  LICENSE  README  README.md  arrayList_client.sh  arrayList_replica.sh  build.xml  c_mClient.sh  checkstyle.xml  client.cmd  client.sh  common.sh  compressLogs.sh  cppHashMapClient.sh  deleteFiles.sh  deployCluster.sh  deployEmulab.sh  digestClient.sh  digestReplica.sh  distributeEmulab.sh  getEmulabTraces.sh  hashmap_client.sh  hashmap_replica.sh  internalClietTest.sh  jar_digestReplica.sh  jar_kvreplica-fp-ic.sh  jar_kvreplica-fp.sh  jar_kvreplica.sh  jar_mClient.sh  jar_replica.sh  launchCluster.sh  launchEmulab.sh  log-client.properties  log-replica.properties  logback.xml  logging.properties  logging_info.properties  mClient.sh  (+25 more)
benchmark/: cliCount128.out  cliCount128.sh  cliCount16.out  cliCount16.sh  cliCount265.out  cliCount265.sh  cliCount64.out  cliCount64.sh  sortMean.sh  varReqSize.results  varReqSize1.out  varReqSize1.sh  varReqSize2.out  varReqSize2.sh  varReqSize3.out  varReqSize3.sh  varReqSizeTcp.results  varReqSizeTcp1.out  varReqSizeTcp1.sh  varReqSizeTcp2.out  varReqSizeTcp2.sh  varReqSizeTcp3.out  varReqSizeTcp3.sh  wsTest1.out  wsTest1.sh  wsTest2.out  wsTest2.sh
infrep/: build.xml  javadoc-includes.txt
matlab/: exp_vs_model.m  exp_vs_model_cpu.m  exp_vs_model_cpu_all.m  exp_vs_model_cpu_main.m  exp_vs_model_main.m  filterData.m  genBDelayGraphs.m  genGraphsBDelayClientsXClients.m  genGraphsBDelayReplicasXClients.m  genGraphsClientsXClients.m  genGraphsClientsXalpha.m  genGraphsClientsXmbszSeriesWnd.m  genGraphsReplicasXClients.m  genGraphsReplicasXalpha.m  genGraphsReplicasXmbsz.m  genGraphsReplicasXmbszSeriesClients.m  genGraphsReplicasXreqsz.m  genGraphsTCPvsUDP.m  genGraphsXClients.m  genGraphsXalpha.m  genGraphsXalphaSeriesMBSZ.m  genGraphsXmbsz.m  genGraphsXmbszSeriesWnd.m  genLargeRequests.m  genModelData.m  getTestDescription.m  graphs_Xbatch_Yalpha.m  graphs_Xbatch_Yalpha_main.m  loadBatchDelaySummaries.m  loadClientSummary.m  loadGraphSettings.m  loadReplicaSummary.m  summarizeAll.m  summarizeClients.m  summarizeReplicas (2).m  summarizeReplicas.m  summarizeThreadTimes.m
natives/: README  common
natives/jpaxos-pmem/: CMakeLists.txt  consensusinstance.cpp  consensusinstance.h  consensuslog.cpp  consensuslog.h  dumper.cpp  hashmap_persistent.hpp  hashmap_persistent_synchronized.hpp  hashset_persistent.hpp  jpaxos-common.cpp  jpaxos-common.hpp  jpaxos-pmem.cpp  linkedqueue_persistent.hpp  paxosstorage.cpp  paxosstorage.h  replicastorage.cpp  replicastorage.h  serviceproxystorage.cpp  serviceproxystorage.h
natives/tools/: CMakeLists.txt  backtrace_error.h  fileWriter.cpp  hashMapClient.cpp  jpaxosMClient.cpp  jpaxosMClient.h  sigcatcher.cpp  systemStats.cpp  systemStats2.cpp
oldcode/: ModularPaxos.java
results-cluster/: conf.txt
scenarios/: art1.sh  art1_extract.sh
tools/: ReadSyncLog.java  csvMean.py  fullssLogsParser.pl  makesql.sh  movingWindow.pl  plots.sh  plots2.sh  plotsClient.sh  recoveryTimes.sh  repeatedTestStatstics.pl  resultsToSql.sh  sqlGetResultLine.sh  sqlSummary.sh  sqlToTimeline.sh  sysctl10gbe.sh
(+831 files in other folders)
